--- a/vignettes/mixed_space_optimization.Rmd
+++ b/vignettes/mixed_space_optimization.Rmd
@@ -20,14 +20,17 @@ knitr::knit_hooks$set(document = function(x){
   gsub("```\n*```r*\n*", "", x)
 })
 ```
+
+This Vignette is supposed to give you an introduction to use **mlrMBO**for mixed-space optimization, meaning to optimize an objective function with a domain that is not only real-valued but also contains discrete values like *names*.
+
 # Mixed Space Optimization
 
 ## Objective Function
-The self-constructed function can be built with ``makeSingleObjetiveFunction``. The ``par.set`` argument has to be a ``ParamSet`` object from the **ParamHelpers** package, which provides information about the parameters of the objective function and their constraints for optimization.
-We define ``j`` in the interval [0,1] and ``k`` as an integer in {1, 2}. The Parameter ``method`` is categorical and can be either ``"a"`` or ``"b"``.
-In this case we want to maximize the function, so we have to set ``minimize = FALSE``.
+The self-constructed function can be built with `makeSingleObjetiveFunction()`. The `par.set` argument has to be a `ParamSet` object from the **ParamHelpers** package, which provides information about the parameters of the objective function and their constraints for optimization.
+We define `j` in the interval [0,1] and `k` as an integer in {1, 2}. The Parameter `method` is categorical and can be either `"a"` or `"b"`.
+In this case we want to maximize the function, so we have to set `minimize = FALSE`.
 As the parameters are different types (e.g. numeric and categorical), the function expects a list instead of a vector as its argument 
-(This is specified by ``has.simple.signature = FALSE``).
+(This is specified by `has.simple.signature = FALSE`).
 For further information about he **smoof** package we refer to the [github page](https://github.com/jakobbossek/smoof).
 
 ```{r}
@@ -56,26 +59,28 @@ objfun2(list(j = 0.5, k = 1L, method = "a"))
 ```
 
 ```{r}
-surr.rf = makeLearner("regr.randomForest")
+surr.rf = makeLearner("regr.randomForest", predict.type = "se", se.method = "sd")
 ```
 
 ```{r}
 control2 = makeMBOControl()
 control2 = setMBOControlInfill(
   control = control2,
-  crit = "mean"
+  crit = "cb",
+  opt.focussearch.points = 500
 )
 control2 = setMBOControlTermination(
   control = control2,
   iters = 10
 )
+design2 = generateDesign(n = 12, par.set = getParamSet(objfun2))
 ```
 
 ## Optimization of objfun2
 
-Now let us use **mlrMBO** to optimize ``objfun2``, which contains one categorical variable.
-As we have already mentioned before, in case of factor variables only ``focussearch`` is suitable and kriging cannot be used as a surrogate model.
-If we use ``mean`` as the infill criterion, any kind of model which can handle factors variables is possible (like regression trees, random forests, linear models and many others).
+Now let us use **mlrMBO** to optimize `objfun2`, which contains one categorical variable.
+As we have already mentioned before, in case of factor variables only `focussearch` is suitable and kriging cannot be used as a surrogate model.
+If we use `mean` as the infill criterion, any kind of model which can handle factors variables is possible (like regression trees, random forests, linear models and many others).
 
 ```{r, eval=TRUE, results='hide'}
 mbo2 = mbo(objfun2, design = design2, learner = surr.rf, control = control2, show.info = FALSE)
@@ -84,17 +89,8 @@ mbo2 = mbo(objfun2, design = design2, learner = surr.rf, control = control2, sho
 mbo2
 ```
 
-If we want to use the expected improvement ``ei`` or (lower) confidence bound ``cb``, the ``predict.type`` attribute of the learner has be set to ``se``. A list of regression learners which support it can be viewed by:
+If we want to use the expected improvement `ei` or (lower) confidence bound `cb`, the `predict.type` attribute of the learner has be set to `se`. A list of regression learners which support it can be viewed by:
 
 ```{r eval=FALSE}
 listLearners(obj = "regr", properties = "se")
-```
-
-
-We modify the random forest to predict the standard error and optimize ``objfun2`` by the ``ei`` infill criterion.
-
-```{r, eval=TRUE}
-learner_rf = makeLearner("regr.randomForest", predict.type = "se")
-control2$infill.crit = "ei"
-mbo(objfun2, design = design2, learner = learner_rf, control = control2, show.info = FALSE)
 ```
