--- a/vignettes/in_depth_introduction.Rmd
+++ b/vignettes/in_depth_introduction.Rmd
@@ -23,19 +23,25 @@ knitr::knit_hooks$set(document = function(x){
 
 This Vignette is supposed to give you a more in-depth introduction to **mlrMBO** and the principles and different approaches of model-based optimization.
 
+## Objective Function
+We use the Branin function for this example.
+```{r}
+objfun1 = makeBraninFunction()
+ggplot2::autoplot(objfun1, render.levels = TRUE, show.optimum = TRUE)
+```
 
 
 ## Initial Design
 
 The second argument of the `mbo()` function - `design` - is the initial design with default setting `NULL`.
 
-An easy (and recommended) way to create an initial design is to use the `generateDesign()` function from the **ParamHelpers** package. 
-If no design is given (i.e. `design = NULL`) a *Maximin Latin Hypercube* `lhs::maximinLHS()` design is used with `n = 4 * getNumberOfParameters(objfun1)` points. 
-Other possibilities to generate designs are for example `generateGridDesign` and `generateRandomDesign`. 
+An easy (and recommended) way to create an initial design is to use the `generateDesign()` function from the **ParamHelpers** package.
+If no design is given (i.e. `design = NULL`) a *Maximin Latin Hypercube* `lhs::maximinLHS()` design is used with `n = 4 * getNumberOfParameters(objfun1)` points.
+Other possibilities to generate designs are for example `generateGridDesign` and `generateRandomDesign`.
 
 _Note:_ If special designs are desired (e.g., orthogonal designs), they can be given as a `data.frame` but you have to make sure that the output resembles the output of `generateDesign()`.
 
-For our objective function `objfun1` we create a slightly larger number of initial points than the default suggests. 
+For our objective function `objfun1` we create a slightly larger number of initial points than the default suggests.
 
 ```{r}
 n = 5 * getNumberOfParameters(objfun1)
@@ -50,7 +56,7 @@ In our case it is quite easy:
 des$y = apply(des, 1, objfun1)
 ```
 
-_Note:_ *mlrMBO* uses `y` as a default name for the outcome of the objective function. 
+_Note:_ *mlrMBO* uses `y` as a default name for the outcome of the objective function.
 This can be changed in the control object.
 
 
@@ -71,7 +77,7 @@ It's use is explained in the Vignette for *mixed space optimization*.
 
 ## MBOControl
 
-The `MBOControl` object controls the optimization process and is created with `makeMBOControl()`. 
+The `MBOControl` object controls the optimization process and is created with `makeMBOControl()`.
 All parameters are documented in `?makeMBOControl`.
 Some that influence the way MBO works are e.g.:
 * `n.objectives`: The number of objectives. 1 implies normal single criteria optimization and is covered in this page. For values >1 see the Vignette for *multi-objective optimization*.
@@ -86,7 +92,7 @@ It is highly recommended to adjust the settings to suit your optimization proble
 
 #### Argument _crit_
 
-An important role plays the choice of how the next design points in the sequential loop are chosen. 
+An important role plays the choice of how the next design points in the sequential loop are chosen.
 5 different infill criteria can be set via the `crit` argument in `setMBOControlInfill()`:
 
 * `mean`: mean response of the surrogate model.
@@ -104,14 +110,14 @@ Then points closer then the value of `filter.proposed.points.tol` to an already 
 
 #### Argument _opt_
 
-The key idea behind model-based optimization is to substitute the expensive optimization on the black-box with optimization on the surrogate as this is deemed to be cheaper. 
+The key idea behind model-based optimization is to substitute the expensive optimization on the black-box with optimization on the surrogate as this is deemed to be cheaper.
 To optimize the infill criterion on the surrogate we also need an optimizer.
 The optimum of the infill criterion function gives us the candidate to be evaluated on the expensive function.
 Which one to use can be defined with the `opt` argument.
 The possibilities are:
 
 * `focussearch`: A Latin Hypercube design of size `opt.focussearch.points` (default 10000) is sampled in the parameter space (by `randomLHS`) and the design point with the best prediction of the infill criterion is determined. Then, the parameter space is shrunk around this point. This step is repeated `opt.focussearch.maxit` (default 5) times and the best observed point is passed back.
-* `cmaes`: The optimal point is found with a covariance matrix adapting evolutionary strategy from the **cmaes** package. If the strategy fails, a random point is generated and a warning is given. Further control arguments can be provided in `opt.cmaes.control` as a list. 
+* `cmaes`: The optimal point is found with a covariance matrix adapting evolutionary strategy from the **cmaes** package. If the strategy fails, a random point is generated and a warning is given. Further control arguments can be provided in `opt.cmaes.control` as a list.
 * `ea`: Use an evolutionary multiobjective optimization algorithm from the package **emoa** to determine the best point. The population size mu can be set by  `opt.ea.mu` (default value is 10). (mu+1) means that in each population only one child is generated using crossover and mutation operators. The parameters `eta` and `p` of the latter two operators can be adjusted via the attributes `opt.ea.sbx.eta`, `opt.ea.sbx.p`,`opt.ea.pm.eta` and `opt.ea.pm.p`. The default number of EA iterations is 500 and can be changed by `opt.ea.maxit` attribute.
 * `nsga2`: Use the non-dominated sorting genetic algorithm from the package **nsga2R** to determine the best point. This algorithm should be used for *multi objective optimization* (see Vignette).
 
@@ -134,7 +140,7 @@ _Note:_ You can also create your own stopping condition(s).
 
 ### setMBOControlMultiPoint
 
-This extends a MBO control object with options for multipoint proposal. 
+This extends a MBO control object with options for multipoint proposal.
 Multipoint proposal means, that multiple points are proposed and evaluated, which is especially useful for parallel batch evaluation. For a detailed introduction, check the Vignette on parallelization.
 
 ### setMBOControlMultiCrit
@@ -150,7 +156,7 @@ Although we presented various options we will mainly go with the defaults settin
 ctrl = makeMBOControl()
 ctrl = setMBOControlInfill(
   control = ctrl,
-  crit = "ei"
+  crit = makeMBOInfillCriterionEI()
 )
 ctrl = setMBOControlTermination(
   control = ctrl,
@@ -165,7 +171,7 @@ res = mbo(objfun1, design = des, learner = surr.km, control = ctrl, show.info = 
 print(res)
 ```
 
-The default output of mbo contains the best found parameter set and the optimzation path. 
+The default output of mbo contains the best found parameter set and the optimzation path.
 The `MBOResult` object contains additional information, most importantly:
 
 * `x`: The best point of the parameter space
@@ -177,9 +183,7 @@ The `MBOResult` object contains additional information, most importantly:
 We can also change some arguments of the `MBOControl` object and run `mbo()` again:
 
 ```{r, eval=FALSE}
-ctrl = setMBOControlInfill(ctrl, crit = "cb")
+ctrl = setMBOControlInfill(ctrl, crit = makeMBOInfillCriterionCB())
 ctrl = setMBOControlTermination(ctrl, iters = 5L)
 mbo(objfun1, design = des, learner = surr.km, control = ctrl, show.info = FALSE)
 ```
-
-
