--- a/vignettes/mixed_space_optimization.Rmd
+++ b/vignettes/mixed_space_optimization.Rmd
@@ -29,7 +29,7 @@ This Vignette is supposed to give you an introduction to use **mlrMBO**for mixed
 The self-constructed function can be built with `makeSingleObjetiveFunction()`. The `par.set` argument has to be a `ParamSet` object from the **ParamHelpers** package, which provides information about the parameters of the objective function and their constraints for optimization.
 We define `j` in the interval [0,1] and `k` as an integer in {1, 2}. The Parameter `method` is categorical and can be either `"a"` or `"b"`.
 In this case we want to maximize the function, so we have to set `minimize = FALSE`.
-As the parameters are different types (e.g. numeric and categorical), the function expects a list instead of a vector as its argument 
+As the parameters are different types (e.g. numeric and categorical), the function expects a list instead of a vector as its argument
 (This is specified by `has.simple.signature = FALSE`).
 For further information about he **smoof** package we refer to the [github page](https://github.com/jakobbossek/smoof).
 
@@ -66,7 +66,7 @@ surr.rf = makeLearner("regr.randomForest", predict.type = "se", se.method = "sd"
 control2 = makeMBOControl()
 control2 = setMBOControlInfill(
   control = control2,
-  crit = "cb",
+  crit = makeMBOInfillCriterionCB(),
   opt.focussearch.points = 500
 )
 control2 = setMBOControlTermination(
