--- a/vignettes/mlrMBO.Rmd
+++ b/vignettes/mlrMBO.Rmd
@@ -64,7 +64,7 @@ Step 2 and 3 are optional as `mbo()` has defaults for these.
 
 ### Optimizing a one dimensional function.
 
-For a simple example we choose to minimize a cosine mixture function with an initial design of 5 points and 10 further evaluations.
+For a simple example we minimize a cosine mixture function with an initial design of 5 points and 10 further evaluations.
 Meaning that in total the optimizer gets 15 evaluations on the objective function to find the optimum.
 
 #### Objective Function
@@ -79,7 +79,7 @@ Check `?smoof::makeSingleObjectiveFunction` for an example.
 obj.fun = makeCosineMixtureFunction(1)
 obj.fun = convertToMinimization(obj.fun)
 print(obj.fun)
-ggplot2::autoplot(obj.fun, show.optimum = TRUE)
+ggplot2::autoplot(obj.fun)
 ```
 
 #### Initial Design
@@ -87,7 +87,7 @@ ggplot2::autoplot(obj.fun, show.optimum = TRUE)
 Before the MBO algorithm can starts it needs a set of already evaluated points - the *inital design*.
 If no design is given (i.e. `design = NULL`) `mbo()` will use a *Maximin Latin Hypercube* `lhs::maximinLHS()` design with `n = 4 * getNumberOfParameters(obj.fun)` points.
 If the design does not include function outcomes `mbo()` will evaluate the design first before starting with the MBO algorithm.
-In this example we choose to generate our own design.
+In this example we generate our own design.
 
 ```{r}
 des = generateDesign(n = 5, par.set = getParamSet(obj.fun), fun = lhs::randomLHS)
@@ -130,17 +130,19 @@ control = setMBOControlTermination(control, iters = 10)
 control = setMBOControlInfill(control, crit = makeMBOInfillCriterionEI())
 ```
 
-Finally, we start the optimization process and print the result object.
+Finally, we start the optimization process and print the result object, which gives us the best found solution and the reached objective value.
+These can also be accessed using the '$' operator.
 
 ```{r cosine_run}
 run = mbo(obj.fun, design = des, learner = surr.km, control = control, show.info = TRUE)
 print(run)
 ```
 
+### Visualization
 
-To get better insight into the MBO process, we can start the optimization with the function `exampleRun()` instead of `mbo()`.
+To get better insight into the MBO process, we can start the previous optimization with the function `exampleRun()` instead of `mbo()`.
 This specialized function augments the results of `mbo()` with additional information for plotting.
-Here, we opt to plot the optimization state at iterations 1, 3, and 10.
+Here, we plot the optimization state at iterations 1, 2, and 10.
 
 ```{r cosine_examplerun, results="hide"}
 run = exampleRun(obj.fun, learner = surr.km, control = control, show.info = FALSE)
@@ -148,6 +150,6 @@ run = exampleRun(obj.fun, learner = surr.km, control = control, show.info = FALS
 
 ```{r cosine_plot_examplerun, warning=FALSE}
 print(run)
-plotExampleRun(run, iters = c(1L, 3L, 10L), pause = FALSE)
+plotExampleRun(run, iters = c(1L, 2L, 10L), pause = FALSE)
 ```
 
