--- a/vignettes/mixed_space_optimization.Rmd
+++ b/vignettes/mixed_space_optimization.Rmd
@@ -29,7 +29,7 @@ This Vignette is supposed to give you an introduction to use **mlrMBO** for mixe
 
 ### Objective Function
 
-We construct an examplarly objective function using `smoof::makeSingleObjetiveFunction()`. 
+We construct an exemplary objective function using `smoof::makeSingleObjetiveFunction()`. 
 The `par.set` argument has to be a `ParamSet` object from the **ParamHelpers** package, which provides information about the parameters of the objective function and their constraints for optimization.
 The objective function will be 3-dimensional with the inputs `j`, `k` and `method`.
 `j` is in the interval [0,1] and `k` as an integer in {1, 2}. 
@@ -104,19 +104,19 @@ control2 = setMBOControlTermination(
 
 ### Initial Design
 
-The inital design is set to size of 12:
+The initial design is set to size of 12:
 
 ```{r init_design}
 design2 = generateDesign(n = 4, par.set = getParamSet(objfun2))
 ```
 
 Note that the initial design has to be big enough to cover all discrete values and ideally all combinations of discrete values including integers.
-If we had 2 discrete variables one with 5 and one with 3 discrete values the inital design should be at least of size 15.
+If we had 2 discrete variables one with 5 and one with 3 discrete values the initial design should be at least of size 15.
 Usually `generateDesign()` takes care that the points are spread uniformly.
 
 ### Optimization
 
-Finally, we start the maximation with `mbo()` with surpressed learner output from *mlr* and we print the result object to obtain the input that lead to the best objective:
+Finally, we start the maximization with `mbo()` with suppressed learner output from *mlr* and we print the result object to obtain the input that lead to the best objective:
 ```{r mbo_run, eval=TRUE}
 # Surpresses output of learners 
 mlr::configureMlr(show.info = FALSE, show.learner.output = FALSE, on.learner.warning = "quiet")
