--- a/vignettes/parallelization.Rmd
+++ b/vignettes/parallelization.Rmd
@@ -51,12 +51,19 @@ As we have a real valued parameter space of our objective function, the **expect
 ctrl = setMBOControlInfill(ctrl, crit = crit.ei)
 ```
 
-The different methods to propose multiple points are as follows:
+The available methods to propose multiple points are as follows:
 * `cl`: Proposes points by the constant liar strategy. 
-This is usually a good choice for the **augmented expected** and the **expected improvement**.
-In the first step the surrogate model is fitted based on the real data and the best point is calculated accordingly. 
-Then, the function value of the best point is simply guessed by the worst seen function evaluation. This "lie"" is used to update the model in order to propose subsequent point. The procedure is applied until the number of points has reached `propose.points`.
-* `cb`: Proposes multiple points by optimizing the confidence bound criterion `propose.points` times with different lambda values. Generally this works the same way as for the single point case, i.e. specify `infill.opt`. The lambdas are drawn from an exp(1)-distribution.
+This is usually a good choice for the **augmented expected - ** and the **expected improvement**.
+The first point is optained by the ordinary infill optimization, like it is used to propose one point.
+To obtain the 2nd point we assume that the evaluation at the first point is finished.
+As we don't really have an outcome yet, we set the outcome to a lie.
+Usually the minimum of all observed outcomes is chosen as the lie.
+This *lie* is used to update the model in order to propose subsequent point. 
+The procedure is repeated until `propose.points` proposals are generated.
+* `cb`: As learnt from Vignette for *Mixed Space Optimization* we prefer the **lower/upper confidence bound** (CB) when we use a *random forest* as a regression method for the surrogate.
+For the *CB* the parameter $\lambda$ is not fixed. 
+This characteristic can be used to obtain multiple proposals by optimizing the *CB* for different lambda values.
+The lambdas are drawn from an exp(1)-distribution.
 * `multicrit`: Use a evolutionary multicriteria optimization. This is a (mu+1) type evolutionary algorithm and runs for `multicrit.maxit` generations. The population size is set to `propose.points`.
 
 
